# ChangeLog for www-client/opera
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.140 2007/09/23 19:14:33 jer Exp $

*opera-9.50_rc1589 (22 Sep 2007)

  22 Sep 2007; Jeroen Roovers <jer@gentoo.org> +opera-9.50_rc1589.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2007/09/21/one-more-snapshot>.

  17 Sep 2007; Jeroen Roovers <jer@gentoo.org> +opera-9.50_alpha1581.ebuild:
  Readd the alpha build with the unchanged RDEPEND for old times´ sake.

*opera-9.50_rc1581 (17 Sep 2007)

  17 Sep 2007; Jeroen Roovers <jer@gentoo.org> +opera-9.50_rc1581.ebuild:
  Not really a version bump, just a name change in accordance with upstream´s
  naming convention, as well as an opportunity to fiddle with the RDEPEND
  list.

*opera-9.50_alpha1581 (15 Sep 2007)

  15 Sep 2007; Jeroen Roovers <jer@gentoo.org> +opera-9.50_alpha1581.ebuild:
  Version bump (still a snapshot).

  07 Sep 2007; Jeroen Roovers <jer@gentoo.org> opera-9.50_alpha1567.ebuild:
  Remove temporary comment.

  07 Sep 2007; Jeroen Roovers <jer@gentoo.org>
  +files/opera-9.50-pluginpath-fbsd.patch, opera-9.23.ebuild,
  opera-9.50_alpha1567.ebuild:
  Apply fbsd pluginpath.ini patch to 9.50. Change 9.23 to use the same
  conditional scheme.

  06 Sep 2007; Jeroen Roovers <jer@gentoo.org>
  +files/opera-9.23-pluginpath-fbsd.patch, opera-9.23.ebuild:
  Apply a different pluginpath.ini patch for elibc_FreeBSD (bug #181300,
  comment #4).

  06 Sep 2007; Jeroen Roovers <jer@gentoo.org> opera-9.50_alpha1567.ebuild:
  Remove unneeded amd64? qt-static? for this build.

  06 Sep 2007; Jeroen Roovers <jer@gentoo.org> opera-9.50_alpha1567.ebuild:
  Changes from bug #191328, comments #5 and #6 applied.

*opera-9.50_alpha1567 (05 Sep 2007)

  05 Sep 2007; Jeroen Roovers <jer@gentoo.org>
  +files/opera-9.50-pluginpath.patch, +opera-9.50_alpha1567.ebuild:
  Version bump.
