@@ -1,0 +1,15 @@
+MD5 af6141eb5bb0704434c613233733d1ff opera-9.50-20070928.2-shared-qt.x86_64-1600.tar.bz2 6007316
+RMD160 66e8f616940231dfa767a2ae3eab1d48624e0156 opera-9.50-20070928.2-shared-qt.x86_64-1600.tar.bz2 6007316
+SHA256 12ef8923ab0a3f085c910dcc8c81376f3e3b8950a46acbbff8cf9ffcc600961a opera-9.50-20070928.2-shared-qt.x86_64-1600.tar.bz2 6007316
+MD5 06f6a71d98c4c2ae34b826bcdc05eea1 opera-9.50-20070928.4-shared-qt.i386.freebsd-1600.tar.bz2 5558808
+RMD160 5fe36b50c67bebd62e491cedd2aee32237a91adc opera-9.50-20070928.4-shared-qt.i386.freebsd-1600.tar.bz2 5558808
+SHA256 0029164c290639e3002fe727f0ee97acf20e2e1864558980cab1afb2c4ef044f opera-9.50-20070928.4-shared-qt.i386.freebsd-1600.tar.bz2 5558808
+MD5 fad51cb530049b89a7131c0be498d0a3 opera-9.50-20070928.5-static-qt.i386.freebsd-1600.tar.bz2 7495883
+RMD160 6e83b0aced56e32f15f7dbe28b6a511ffd98297e opera-9.50-20070928.5-static-qt.i386.freebsd-1600.tar.bz2 7495883
+SHA256 a3faf03deecae763dc23fea5b48e1eb2f851a145eea346a6f3348789a277d858 opera-9.50-20070928.5-static-qt.i386.freebsd-1600.tar.bz2 7495883
+MD5 6dd9759e0653f2d27ee7ed1df22b7796 opera-9.50-20070928.6-shared-qt.i386-1600.tar.bz2 5509338
+RMD160 ef94469d1338dab7ecf9d3b1f261e10f6e74e122 opera-9.50-20070928.6-shared-qt.i386-1600.tar.bz2 5509338
+SHA256 c926dd677df75bf69f3644060c2bfe1574784b95e88de9dcf2c09653931f7a6f opera-9.50-20070928.6-shared-qt.i386-1600.tar.bz2 5509338
+MD5 5318a9f01fc137ee04406f4b6d9f3f10 opera-9.50-20070928.9-static-qt.i386-1600.tar.bz2 7742553
+RMD160 4eb56e5693a038ddbb3a8a8c47ce9b85961eb985 opera-9.50-20070928.9-static-qt.i386-1600.tar.bz2 7742553
+SHA256 0e9aa4072922e36a57ee4b39a6ee8a2bc68cae5b53ec7a3e45834c1dcbfbb819 opera-9.50-20070928.9-static-qt.i386-1600.tar.bz2 7742553
