@@ -1,6 +1,12 @@
 # ChangeLog for www-client/opera
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.140 2007/09/23 19:14:33 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.141 2007/09/28 17:09:04 jer Exp $
+
+*opera-9.50_rc1600 (28 Sep 2007)
+
+  28 Sep 2007; Jeroen Roovers <jer@gentoo.org> +opera-9.50_rc1600.ebuild:
+  Weekly version bump
+  <http://my.opera.com/desktopteam/blog/2007/09/28/snapshot-extravaganza>.
 
 *opera-9.50_rc1589 (22 Sep 2007)
 
